# vincenzo

./: .actrc  .gitignore  Cargo.toml  Kerkour S. Black Hat Rust...Rust programming language 2022  LICENSE  README.md  \  book-log.txt  book.torrent  daemon-test.sh  dockerfile  ext.txt  flake.nix  heaptrack.vczd.828484.zst  heaptrack.vczd.838718.zst  log.txt  pieces.iso  real-music.torrent  rust-toolchain.toml  rustfmt.toml  spellcheck.toml  tape.tape  ui-test.sh
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
btr/arch/bar/: baz.txt
btr/arch/bar/buzz/: bee.txt
crates/utp/: Cargo.toml
crates/utp/src/: congestion_control.rs  header.rs  lib.rs  listener.rs  packet.rs  stream.rs
crates/vcz/: Cargo.toml  README.md
crates/vcz-daemon/: Cargo.toml
crates/vcz-daemon/src/: main.rs
crates/vcz-lib/: Cargo.toml
crates/vcz-lib/src/: bitfield.rs  config.rs  counter.rs  daemon.rs  daemon_wire.rs  deduped_layer.rs  dirs.rs  disk.rs  error.rs  lib.rs  magnet.rs  metainfo.rs  utils.rs
crates/vcz-lib/src/daemon_wire/: mod.rs
crates/vcz-lib/src/extensions/core/: codec.rs  handshake_codec.rs  mod.rs
crates/vcz-lib/src/extensions/extended/: codec.rs  mod.rs  trait.rs
crates/vcz-lib/src/extensions/holepunch/: codec.rs  mod.rs
crates/vcz-lib/src/extensions/metadata/: codec.rs  mod.rs
crates/vcz-lib/src/peer/: mod.rs  request_manager.rs  types.rs
crates/vcz-lib/src/torrent/: from_magnet.rs  from_meta_info.rs  mod.rs  types.rs
crates/vcz-lib/src/tracker/: action.rs  announce.rs  connect.rs  mod.rs
crates/vcz-macros/: Cargo.toml
crates/vcz-macros/src/: lib.rs
crates/vcz-test/: Cargo.toml
crates/vcz-test/tests/: download.rs  requests.rs  unchoke-algorithm.rs
crates/vcz-test/tests/common/: mod.rs  peer.rs  tracker.rs
crates/vcz-ui/: Cargo.toml
crates/vcz-ui/src/: action.rs  app.rs  error.rs  lib.rs  main.rs  palette.rs  tui.rs
crates/vcz-ui/src/components/: footer.rs  mod.rs
crates/vcz-ui/src/pages/: empty.rs  info.rs  mod.rs  torrent_list.rs
crates/vcz-ui/src/widgets/: confirm_popup.rs  menu.rs  mod.rs  network_chart.rs  vim_input.rs
crates/vcz/src/: main.rs
crates/vcz_daemon/: Cargo.toml  README.md
crates/vcz_daemon/src/: args.rs  error.rs  lib.rs  main.rs
crates/vcz_lib/: Cargo.toml  README.md
crates/vcz_lib/src/: avg.rs  cli.rs  config.rs  counter.rs  disk.rs  error.rs  extension.rs  lib.rs  magnet_parser.rs  metainfo.rs  torrent.rs  utils.rs
crates/vcz_lib/src/daemon_wire/: mod.rs
crates/vcz_lib/src/extensions/extended/: codec.rs  mod.rs  trait.rs
crates/vcz_lib/src/extensions/metadata/: codec.rs
crates/vcz_lib/src/peer/: mod.rs
crates/vcz_lib/src/tcp_wire/: messages.rs
crates/vcz_lib/src/tracker/: action.rs  event.rs  mod.rs
crates/vcz_macros/tests/: tests.rs
crates/vcz_ui/: Cargo.toml  README.md
crates/vcz_ui/src/: action.rs  app.rs  error.rs  lib.rs  main.rs  torrent_list.rs  tui.rs
crates/vcz_ui/src/pages/: mod.rs  torrent_list.rs
crates/vcz_ui/src/widgets/: chart.rs  mod.rs  network_chart.rs  vim_input.rs
crates/vincenzo/: Cargo.toml  README.md
crates/vincenzo/src/: args.rs  avg.rs  bitfield.rs  cli.rs  config.rs  counter.rs  daemon.rs  disk.rs  error.rs  extension.rs  handshake_peer.rs  lib.rs  magnet.rs  magnet_parser.rs  metainfo.rs  torrent.rs  utils.rs
crates/vincenzo/src/daemon_wire/: mod.rs
crates/vincenzo/src/extensions/: mod.rs
crates/vincenzo/src/extensions/core/: codec.rs  handshake_codec.rs  message.rs  mod.rs
crates/vincenzo/src/extensions/extended/: codec.rs  mod.rs  trait.rs
crates/vincenzo/src/extensions/holepunch/: codec.rs  mod.rs
crates/vincenzo/src/extensions/metadata/: codec.rs  mod.rs
crates/vincenzo/src/peer/: mod.rs  request_manager.rs  session.rs  types.rs
crates/vincenzo/src/tcp_wire/: messages.rs  mod.rs
crates/vincenzo/src/torrent/: from_magnet.rs  from_meta_info.rs  mod.rs  types.rs
crates/vincenzo/src/tracker/: action.rs  announce.rs  connect.rs  event.rs  mod.rs
crates/vincenzo/tests/: integration.rs
crates/vincenzo_macros/: Cargo.toml
crates/vincenzo_macros/src/: lib.rs
crates/vincenzo_macros/tests/: tests.rs
nix/: default.nix  hm-module.nix
src/: avg.rs  backend.rs  bitfield.rs  cli.rs  config.rs  disk.rs  error.rs  extension.rs  frontend.rs  lib.rs  magnet_parser.rs  main.rs  metainfo.rs  mod.rs  peer.rs  torrent.rs  torrent_list.rs
src/.github/workflows/: build.yml  release.yml
src/frontend/: mod.rs  torrent_list.rs
src/models/: backend.rs  cli.rs
src/peer/: mod.rs  session.rs
src/tcp_wire/: lib.rs  messages.rs  mod.rs
src/tracker/: action.rs  announce.rs  client.rs  connect.rs  event.rs  mod.rs  tracker.rs
test-files/: book.torrent  foo.txt  music.torrent
test-files/complete/: t.torrent  t3.torrent
test-files/t/bar/buzz/: bee.txt
tests/: peers.rs
workflows/: build.yml  release.yml
