cargo-features = ["panic-immediate-abort"]

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = true
opt-level = "z"
overflow-checks = false
panic = "immediate-abort"
rpath = false
strip = true

[profile.release-heaptrack]
lto = true
codegen-units = 1
inherits = "dev"
debug = 1

[profile.dev.package."*"]
debug = false

[workspace]
members = [
  "crates/vcz-daemon",
  "crates/vcz-ui",
  "crates/vcz-lib",
  "crates/vcz-test",
  "crates/vcz-macros",
  "crates/vcz",
  "crates/utp",
]
resolver = "2"

[workspace.dependencies]
int-enum = "1.2.0"
rkyv = { version = "0.8.15", features = ["big_endian", "unaligned"] }
page_size = "0.6.0"
quick_cache = "0.6.21"
bendy = "0.6.1"
bit-vec = "0.9.1"
bytes = "1.11.1"
argh = "0.1.19"
futures = "0.3.32"
hex = "0.4.3"
magnet-url = "3.0.0"
rand = "0.10.0"
rayon = "1.11.0"
memmap2 = "0.9.10"
signal-hook = "0.4.4"
signal-hook-tokio = { version = "0.4.0", features = ["futures-v0_3"] }
sha1 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23" }
urlencoding = "2.1.3"
vcz-ui = { path = "crates/vcz-ui" }
vcz-lib = { path = "crates/vcz-lib" }
vcz-macros = { path = "crates/vcz-macros" }

[workspace.metadata.spellcheck]
config = "spellcheck.toml"
