[package]
name = "vcz-daemon"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "vczd"
path = "src/main.rs"

[features]
debug = []

[dependencies]
bendy = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
magnet-url = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
vcz-lib = { workspace = true }
