[package]
name = "vcz-daemon"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "vczd"
path = "src/main.rs"

[features]
debug = []

[dependencies]
futures = { workspace = true }
hex = { workspace = true }
magnet-url = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vcz-lib = { workspace = true }
