[package]
name = "vcz-lib"
version = "0.0.1"
description = "A BitTorrent protocol library that powers the Vincenzo client."
keywords = ["distributed", "bittorrent", "torrent", "p2p", "networking"]
categories = ["network-programming"]
repository = "https://github.com/gabrieldemian/vincenzo"
homepage = "https://vincenzo.rs"
authors = ["Gabriel Lombardo <gabrielgcr45@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
exclude = ["*.log"]

[dependencies]
int-enum = { workspace = true }
bincode = { workspace = true }
rkyv = { workspace = true }
lru = { workspace = true }
bendy = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
bitvec = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs = { version = "6.0.0" }
futures = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
magnet-url = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
vcz-macros = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }

[features]
debug = []
