[package]
name = "vcz-lib"
version = "0.0.1"
description = "A BitTorrent protocol library that powers the Vincenzo client."
keywords = ["distributed", "bittorrent", "torrent", "p2p", "networking"]
categories = ["network-programming"]
repository = "https://github.com/gabrieldemian/vincenzo"
authors = ["Gabriel Lombardo <gabrielgcr45@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
exclude = ["*.log"]

[features]
debug = []

[dependencies]
dirs = "6.0.0"

int-enum = { workspace = true }
rkyv = { workspace = true }
lru = { workspace = true }
bendy = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
bitvec = { workspace = true }
bytes = { workspace = true }
argh = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
magnet-url = { workspace = true }
rand = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
vcz-macros = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
