[package]
name = "vcz-macros"
version = "0.0.1"
description = "Procedural macros of Vincenzo"
keywords = ["distributed", "bittorrent", "torrent", "p2p", "networking"]
categories = ["network-programming"]
repository = "https://github.com/gabrieldemian/vincenzo"
authors = ["Gabriel Lombardo <gabrielgcr45@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
exclude = ["tests/*", "*.log"]

[lib]
proc-macro = true

[[test]]
name = "tests"

[dependencies]
quote = "1.0.44"
syn = "2.0.114"
darling = "0.23.0"
