[package]
name = "vcz-test"
version = "0.0.1"
authors = ["Gabriel Lombardo <gabrielgcr45@gmail.com>"]
edition = "2024"

[dependencies]
rand = { workspace = true }
bendy = { workspace = true }
hashbrown = { workspace = true }
tokio = { workspace = true }
vcz-lib = { workspace = true, features = ["debug"] }
