[package]
name = "vcz-ui"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
unicode-width = "=0.2.0"

futures = { workspace = true }
magnet-url = { workspace = true }
ratatui = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
vcz-lib = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }

[features]
debug = []
