[package]
name = "vcz-ui"
version = "0.0.1"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
unicode-width = "=0.2.2"

futures = { workspace = true }
magnet-url = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
vcz-lib = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }

[features]
debug = []
