[package]
name = "vcz"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "vcz"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
magnet-url = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
tracing-appender = { workspace = true }
time = { workspace = true }
vcz-lib = { workspace = true }
vcz-ui = { workspace = true }
