[package]
name = "vcz"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "vcz"
path = "src/main.rs"

[dependencies]
magnet-url = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
vcz-lib = { workspace = true }
vcz-ui = { workspace = true }
