[package]
name = "vcz_daemon"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "vczd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = { version = "0.3.3", features = ["std"] }
bitlab = "1.1.0"
bytes = "1.4.0"
clap = {version = "4.3.4", features = ["derive"]}
console-subscriber = "0.1.9"
decurse = "0.0.4"
directories = "5.0.1"
futures = "0.3.28"
hashbrown = "0.14.0"
hex = "0.4.3"
magnet-url = "2.0.0"
rand = "0.8.5"
serde = { version = "1.0.185", features = ["derive"] }
sha1_smol = { version = "1.0.0", features = ["serde"] }
speedy = "0.8.6"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["rt", "fs", "tracing", "time", "macros", "rt-multi-thread", "sync", "io-std", "io-util",  "net"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
toml = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
urlencoding = "2.1.3"
vcz_lib = { path = "../vcz_lib" }
