[package]
name = "vcz_daemon"
version = "0.0.3"
edition = "2021"

[[bin]]
name = "vczd"
path = "src/main.rs"

[dependencies]
bendy = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
hex = { workspace = true }
magnet-url = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha1_smol = { workspace = true }
speedy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
vincenzo = { workspace = true }
