[package]
name = "vcz_ui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
clap = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
magnet-url = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tui-textarea =  { version = "0.7.0", features = ["crossterm"] }
vincenzo = { workspace = true }

[features]
test = []
