[package]
name = "vincenzo"
version = "0.0.3"
description = "A BitTorrent protocol library that powers the Vincenzo client."
keywords = ["distributed", "bittorrent", "torrent", "p2p", "networking"]
categories = ["network-programming"]
repository = "https://github.com/gabrieldemian/vincenzo"
homepage = "https://vincenzo.rs"
authors = ["Gabriel Lombardo <gabrielgcr45@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
exclude = ["tests/*", "*.log"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bendy = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
magnet-url = { workspace = true }
sha1_smol = { workspace = true }
speedy = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
bitvec = { workspace = true }
